prevent iOS from zooming into text fields
- the page was zooming in, and not automatically zooming back out,
  which would be just slightly the wrong thing (just the very edges
  of the map were cut off as a result).

- see:
   http://stackoverflow.com/a/16255670/1024811
   http://www.ampedupdesigns.com/blog/show?bid=53

--- a/css/style.css
+++ b/css/style.css
@@ -438,3 +438,11 @@ input#nearby-girls {
 	    margin-right: 5px;
 	}
 }
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  select:focus,
+  textarea:focus,
+  input:focus {
+    font-size: 16px;
+  }
+}
